external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/partial_type_suggestions@ide.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/macros.move:72:16
   │
72 │         return b"0".to_string()
   │                ^^^^ String value: b"0"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:13:34
   │
13 │ const EDenominator: vector<u8> = b"Quotient specified with a zero denominator";
   │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified with a zero denominator"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:17:5
   │
17 │     b"Quotient specified is too small, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too small, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:21:5
   │
21 │     b"Quotient specified is too large, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too large, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:24:31
   │
24 │ const EOverflow: vector<u8> = b"Overflow from an arithmetic operation";
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Overflow from an arithmetic operation"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:27:37
   │
27 │ const EDivisionByZero: vector<u8> = b"Division by zero";
   │                                     ^^^^^^^^^^^^^^^^^^^ String value: b"Division by zero"

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/string.move:127:21
    │
127 │ #[deprecated(note = b"Use `std::string::as_bytes` instead.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Use `std::string::as_bytes` instead."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/string.move:130:21
    │
130 │ #[deprecated(note = b"Use `std::string::substring` instead.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Use `std::string::substring` instead."

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:13:34
   │
13 │ const EDenominator: vector<u8> = b"Quotient specified with a zero denominator";
   │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified with a zero denominator"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:17:5
   │
17 │     b"Quotient specified is too small, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too small, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:21:5
   │
21 │     b"Quotient specified is too large, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too large, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:24:31
   │
24 │ const EOverflow: vector<u8> = b"Overflow from an arithmetic operation";
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Overflow from an arithmetic operation"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:27:37
   │
27 │ const EDivisionByZero: vector<u8> = b"Division by zero";
   │                                     ^^^^^^^^^^^^^^^^^^^ String value: b"Division by zero"

note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:1:1
  │  
1 │ ╭ module a::m {
2 │ │     public struct S<T> { x: T }
3 │ │     public struct A {}
4 │ │ }
  │ ╰─^ Possible in-scope names
  │  
  = members: 'Option -> std::option::Option', 'A -> a::m::A', or 'S -> a::m::S'
  = modules: 'Self -> a::m', 'internal -> std::internal', 'option -> std::option', or 'vector -> std::vector'
  = addresses: 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
  = type params: 

note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:2:29
  │
2 │     public struct S<T> { x: T }
  │                             ^ Possible in-scope names
  │
  = members: 'Option -> std::option::Option', 'A -> a::m::A', or 'S -> a::m::S'
  = modules: 'Self -> a::m', 'internal -> std::internal', 'option -> std::option', or 'vector -> std::vector'
  = addresses: 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
  = type params: 'T'

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:6:1
   │  
 6 │ ╭ module a::test {
 7 │ │     use a::m::{Self, S, A};
 8 │ │ 
 9 │ │     public fun p(): vector<S
10 │ │ 
11 │ │     public fun q(x: S<A
12 │ │ }
   │ ╰─^ Possible in-scope names
   │  
   = members: 'Option -> std::option::Option', 'A -> a::m::A', 'S -> a::m::S', 'p -> a::test::p', or 'q -> a::test::q'
   = modules: 'Self -> a::test', 'internal -> std::internal', 'm -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

warning[W09001]: unused alias
  ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:7:16
  │
7 │     use a::m::{Self, S, A};
  │                ^^^^ Unused 'use' of alias 'm'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:9:28
  │
9 │     public fun p(): vector<S
  │                            ^ Possible in-scope names
  │
  = members: 'Option -> std::option::Option', 'A -> a::m::A', 'S -> a::m::S', 'p -> a::test::p', or 'q -> a::test::q'
  = modules: 'Self -> a::test', 'internal -> std::internal', 'm -> a::m', 'option -> std::option', or 'vector -> std::vector'
  = addresses: 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
  = type params: 

error[E03008]: too few type arguments
  ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:9:28
  │
9 │     public fun p(): vector<S
  │                            ^ Invalid instantiation of 'a::m::S'. Expected 1 type argument(s) but got 0

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:5
   │
 9 │     public fun p(): vector<S
   │                           - To match this '<'
10 │ 
11 │     public fun q(x: S<A
   │     ^ Expected '>'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:5
   │
11 │     public fun q(x: S<A
   │     ^^^^^^
   │     │
   │     Unexpected 'public'
   │     Expected '{'

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:18
   │
11 │     public fun q(x: S<A
   │                  ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:21
   │
11 │     public fun q(x: S<A
   │                     ^ Possible in-scope names
   │
   = members: 'Option -> std::option::Option', 'A -> a::m::A', 'S -> a::m::S', 'p -> a::test::p', or 'q -> a::test::q'
   = modules: 'Self -> a::test', 'internal -> std::internal', 'm -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:23
   │
11 │     public fun q(x: S<A
   │                       ^ Possible in-scope names
   │
   = members: 'Option -> std::option::Option', 'A -> a::m::A', 'S -> a::m::S', 'p -> a::test::p', or 'q -> a::test::q'
   = modules: 'Self -> a::test', 'internal -> std::internal', 'm -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:12:1
   │
11 │     public fun q(x: S<A
   │                      - To match this '<'
12 │ }
   │ ^ Expected '>'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:12:1
   │
12 │ }
   │ ^
   │ │
   │ Unexpected '}'
   │ Expected ',' or ')'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:14:1
   │
11 │     public fun q(x: S<A
   │                 - To match this '('
   ·
14 │ 
   │ ^ Expected ')'

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:61:15
   │
61 │     bytes == &b"bool" ||
   │               ^^^^^^^ String value: b"bool"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:62:19
   │
62 │         bytes == &b"u8" ||
   │                   ^^^^^ String value: b"u8"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:63:19
   │
63 │         bytes == &b"u16" ||
   │                   ^^^^^^ String value: b"u16"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:64:19
   │
64 │         bytes == &b"u32" ||
   │                   ^^^^^^ String value: b"u32"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:65:19
   │
65 │         bytes == &b"u64" ||
   │                   ^^^^^^ String value: b"u64"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:66:19
   │
66 │         bytes == &b"u128" ||
   │                   ^^^^^^^ String value: b"u128"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:67:19
   │
67 │         bytes == &b"u256" ||
   │                   ^^^^^^^ String value: b"u256"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:68:19
   │
68 │         bytes == &b"address" ||
   │                   ^^^^^^^^^^ String value: b"address"

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:135:21
    │
135 │ #[deprecated(note = b"Renamed to `with_defining_ids` for clarity.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `with_defining_ids` for clarity."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:140:21
    │
140 │ #[deprecated(note = b"Renamed to `with_original_ids` for clarity.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `with_original_ids` for clarity."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:145:21
    │
145 │ #[deprecated(note = b"Renamed to `as_string` for consistency.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `as_string` for consistency."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:150:21
    │
150 │ #[deprecated(note = b"Renamed to `address_string` for consistency.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `address_string` for consistency."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:155:21
    │
155 │ #[deprecated(note = b"Renamed to `module_string` for consistency.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `module_string` for consistency."

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/unit_test.move:24:28
   │
24 │         std::debug::print(&b"Assertion failed:".to_string());
   │                            ^^^^^^^^^^^^^^^^^^^^ String value: b"Assertion failed:"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/unit_test.move:26:28
   │
26 │         std::debug::print(&b"!=".to_string());
   │                            ^^^^^ String value: b"!="

note[I15007]: IDE string value
  ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/fixed_point32.move:8:16
  │
8 │         note = b"Use `std::uq32_32` instead. If you need to convert from a `FixedPoint32` to a `UQ32_32`, you can use the `std::fixed_point32::get_raw_value` with `std::uq32_32::from_raw_value`.",
  │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Use `std::uq32_32` instead. If you need to convert from a `FixedPoint32` to a `UQ32_32`, you can use the `std::fixed_point32::get_raw_value` with `std::uq32_32::from_raw_value`."
